# audio-reactive-visualizer

./: README.md  index.html  sketch.js
cpp-engine/: CMakeLists.txt  main.cpp
cpp-engine/audio/: AudioEngine.h
cpp-engine/graph/: AudioGraph.cpp  AudioGraph.h
cpp-engine/nodes/: AudioNode.h  EnvelopeNode.cpp  EnvelopeNode.h  FFTNode.cpp  FFTNode.h  GainNode.cpp  GainNode.h
frontend/: index.html  visualizer.js
python/: feature_server.py  requirements.txt
